name:                gloss-Kario
version:             0.1.0.0
author:              Karel Boerstoel & Kaan Pagie
maintainer:          K.Boerstoel@students.uu.nl
category:            Game
build-type:          Simple
cabal-version:       >=1.10


executable gloss-Kario
  main-is:             Main.hs
  build-depends:       base >= 4 && < 5,
                       gloss,
                       random
  hs-source-dirs:      src
  other-modules:       Controller
                     , Model
                     , View
  default-language:    Haskell2010